--- a/mysite/rental_system/static/darkmode.css
+++ b/mysite/rental_system/static/darkmode.css
@@ -58,3 +58,9 @@
   background-color: #eee !important;
 }
 
+[data-theme="dark"] .page-link {
+  border: 1px solid #444;
+  background-color: #333 !important;
+}
+
+
