--- a/mysite/rental_system/templates/accounts/change_password.html
+++ b/mysite/rental_system/templates/accounts/change_password.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+{% load widget_tweaks %}
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -13,7 +14,17 @@
 
 <form method="post">
     {% csrf_token %}
+    <div class="form-group form-group-changepass">
+  
+    <!--
+    TODO: FIX
+    {% for field in form.visible_fields%}
+    {% render_field field class="form-control" placeholder=field.label %}
+    {% endfor %}
+    -->
+    
     {{ form }}
-    <button type="submit">Save changes</button>
+    <button type='submit' style='width: 100%' class='btn btn-success'>Save changes</button>
+    </div>
   </form>
 {% endblock %}
