--- a/mysite/rental_system/templates/rental_system/edit_review.html
+++ b/mysite/rental_system/templates/rental_system/edit_review.html
@@ -2,6 +2,9 @@
 {% block content %}
 {% load static %}
 {% load widget_tweaks %}
+<!-- call empty tag to apply dark theme-->
+<input type="null" class="custom-control-input" id="DarkTheme">
+
 <link rel="stylesheet" href="{% static 'rating.css' %}">
 <div class="container">
     <h3>Edit review</h3>
