--- a/mysite/rental_system/templates/rental_system/reviews.html
+++ b/mysite/rental_system/templates/rental_system/reviews.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+<!-- call empty tag to apply dark theme-->
+<input type="null" class="custom-control-input" id="DarkTheme">
+
 <div class="container">
   <h3>Your reviews</h3>
   <hr>
