--- a/mysite/rental_system/templates/rental_system/all_reviews.html
+++ b/mysite/rental_system/templates/rental_system/all_reviews.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+<!-- call empty tag to apply dark theme-->
+<input type="null" class="custom-control-input" id="DarkTheme">
+
 <div class="container">
   <h4>All Reviews for <a href="{% url 'work' current_work %}">{{ title.title }}</a></h4>
   <hr>
