--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -25,6 +26,7 @@
 			}
 		}
 	</style>
+	<link rel="stylesheet" href="{% static 'darkmode.css' %}">
 </head>
 
 <body>
@@ -63,6 +65,7 @@
 	</div>
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="{% static 'darkmode.js' %}"></script>
 </body>
 
 </html>
