--- a/mysite/rental_system/templates/rental_system/work.html
+++ b/mysite/rental_system/templates/rental_system/work.html
@@ -18,7 +18,7 @@
         {% endif %}
         <div class="row" id="header">
             <div class="col-12 col-md-4">
-                <img alt="Kuva tähän!" src="" class="w-100 img-responsive">
+                <img alt="Kuva tähän!" src="{% static 'kuvat/kirja.png' %}" class="w-100 img-responsive">
             </div>
             <div class="col-12 col-md-8">
                 <h1>{{ work.title }}</h1>
