--- a/mysite/rental_system/templates/rental_system/work.html
+++ b/mysite/rental_system/templates/rental_system/work.html
@@ -18,7 +18,11 @@
         {% endif %}
         <div class="row" id="header">
             <div class="col-12 col-md-4">
+                {% if not work.image %}
                 <img alt="Kuva tähän!" src="{% static 'kuvat/kirja.png' %}" class="w-100 img-responsive">
+                {% else %}
+                <img alt="Kuva tähän!" src="{{ work.image }}" class="w-100 img-responsive">
+                {% endif %}
             </div>
             <div class="col-12 col-md-8">
                 <h1>{{ work.title }}</h1>
@@ -31,7 +35,7 @@
                 <hr>
                 <p>{{ work.type }}</p>
                 <p>{{ work.creators.all |join:", " }}</p>
-                <p>{{ work.genres.all|join:"," }}</p>
+                <p>{{ work.genres.all|join:", " }}</p>
                 <p>{{ work.publishers.all|join:", "}} {{ work.pub_date }}</p>
                 <p>{{ work.desc }}</p>
                 {% if user.is_authenticated %}
