--- a/mysite/rental_system/templates/registration/login.html
+++ b/mysite/rental_system/templates/registration/login.html
@@ -34,7 +34,7 @@
       <a href="/register">Register</a>
   </table>
   <table>
-    <a href="/reset-password">Forgot your password?</a>
+  <!--  <a href="/reset-password">Forgot your password?</a>-->
 </table>
 </div>
 </body>
