--- a/mysite/rental_system/templates/rental_system/index.html
+++ b/mysite/rental_system/templates/rental_system/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <div class="pc">
+                <div class="desktop">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'popular' %}">Popular works</a>
