--- a/mysite/rental_system/templates/rental_system/index.html
+++ b/mysite/rental_system/templates/rental_system/index.html
@@ -87,7 +87,7 @@
         {% if works %}
         <div class="col-lg-10 col-12">
             {% for work in works %}
-            {% if query in work.title.casefold or query in work.desc or query in work.creators.all|join:", " or query in work.genres.all|join:", "  or query in work.type.type %}
+            {% if query in work.title or query in work.title.casefold or query in work.desc or query in work.creators.all|join:", " or query in work.genres.all|join:", "  or query in work.type.type %}
             <div class="card">
                 <div class="card-body">
                     <a href="work/{{ work.id }}">
