--- a/mysite/register/templates/register/register.html
+++ b/mysite/register/templates/register/register.html
@@ -13,6 +13,9 @@
 
 </head>
 <div class ="container container-register">
+<div class="head">
+<h5><a href="/">Rental System</a></h5>
+</div>
 <h2>Register a new account</h2>
 <h3 style="color: silver;">It's fast and easy!</h3>
 <form method='POST' class='form-group form-group-register'>
