--- a/mysite/rental_system/templates/registration/login.html
+++ b/mysite/rental_system/templates/registration/login.html
@@ -16,6 +16,9 @@
 </head>
 
 <div class ="container">
+    <div class="head">
+    <h5><a href="/">Rental System</a></h5>
+    </div>
     <h2>Log in</h2>
 <form method='POST' class='form-group'>
     {% csrf_token %}
