--- a/mysite/rental_system/static/darkmode.css
+++ b/mysite/rental_system/static/darkmode.css
@@ -28,6 +28,7 @@
 
 [data-theme="dark"] .card {
   background-color: #333 !important;
+  border: 1px solid #444;
 }
 
 [data-theme="dark"] body {
@@ -63,4 +64,7 @@
   background-color: #333 !important;
 }
 
+[data-theme="dark"] .page-item.active .page-link {
+  color: #6c757d !important;
+}
 
