--- a/mysite/rental_system/templates/registration/login.html
+++ b/mysite/rental_system/templates/registration/login.html
@@ -27,6 +27,15 @@
       {% render_field field class="form-control" placeholder=field.label %}
     </div>
     {% endfor %}
+
+    {% if form.errors %}
+    {% for error in form.non_field_errors %}
+      <div class="alert alert-danger">
+        {{ error|escape }}
+      </div>
+    {% endfor %}
+    {% endif %}
+
     <button type='submit' style='width: 100%' class='btn btn-success'>Login</button>
 </form>
 </div>
