--- a/mysite/rental_system/templates/rental_system/index.html
+++ b/mysite/rental_system/templates/rental_system/index.html
@@ -4,163 +4,27 @@
 <link rel="stylesheet" href="{% static 'mobile.css' %}">
 <!-- call empty tag to apply dark theme-->
 <input type="null" class="custom-control-input" id="DarkTheme">
+{% include 'mini-nav.html' %}
 <div class="container-fluid">
-    <div class="row">
-        {% if types %}
-        <div class="col-lg-2 col-12">
-            <nav id="sidebar">
-                <!--searchbar-->
-                <div class="searchbar">
-                    <form name="searchform" method="GET">
-                        <input type="text" class="form-control" name="search" id="search" placeholder="Search"
-                            minlength="3" autocomplete="off" required>
-                    </form>
-                </div>
-                <br>
-
-
-                <div class="mobile-navbar">
-                    <nav class="navbar navbar-light" style="background-color: #eee;">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="mobile-searchbar">
-                            <form name="searchform" method="GET">
-                                <input type="text" class="form-control" name="search" id="search" placeholder="Search"
-                                    minlength="3" autocomplete="off" required>
-                            </form>
-                        </div>
-                    </nav>
-
-                    <div class="collapse" id="navbarToggleExternalContent">
-                        <div class="bg-light">
-                            <ul class="nav flex-column">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'popular' %}">Popular works</a>
-                                </li>
-                                {% for type in types %}
-                                <li class="nav-item">
-                                    <a href="?search={{ type }}" class="nav-link">{{ type }}</a>
-                                </li>
-                                {% endfor %}
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                                        aria-haspopup="true" aria-expanded="false">Genres</a>
-                                    <div class="dropdown-menu">
-                                        {% for genre in genres %}
-                                        <a class="dropdown-item" href="?search={{ genre }}">{{ genre }}</a>
-                                        {% endfor %}
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="desktop">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'popular' %}">Popular works</a>
-                        </li>
-                        {% for type in types %}
-                        <li class="nav-item">
-                            <a href="?search={{ type }}" class="nav-link">{{ type }}</a>
-                        </li>
-                        {% endfor %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                                aria-haspopup="true" aria-expanded="false">Genres</a>
-                            <div class="dropdown-menu">
-                                {% for genre in genres %}
-                                <a class="dropdown-item" href="?search={{ genre }}">{{ genre }}</a>
-                                {% endfor %}
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        {% endif %}
-        <!--works-->
-        {% if works %}
-        <div class="col-lg-10 col-12">
-            {% for work in works %}
-            {% if query in work.title or query in work.title.casefold or query in work.desc or query in work.creators.all|join:", " or query in work.genres.all|join:", "  or query in work.type.type %}
+    <br>
+    <h1>Recently added Works</h1>
+    <hr>
+    <div class="row row-cols-1 row-cols-md-3  row-cols-lg-4 m-3">
+        {% for work in works %}
+        <div class="col mb-4">
             <div class="card">
+                {% if work.image %}
+                <img src="{{ work.image }}" class="card-img-top" alt="..." style="object-fit: cover; height: 60vh; width: 100%;">
+                {% else %}
+                <img src="{% static 'kuvat/kirja.png' %}" class="card-img-top" alt="..." style="object-fit: cover; height: 60vh; width: 100%;">
+                {% endif %}
                 <div class="card-body">
-                    <a href="work/{{ work.id }}">
-                        <h5 class="card-title">{{ work.title }}</h5>
-                    </a>
-                    <p class="card-text"><small class="text-muted">{{ work.creators.all|join:", " }}</small></p>
-                    <p class="card-text">{{ work.type.type }}:
-                    {% if work.available %}
-                    
-                    <span class="text-success">Available</span>
-                    {% else %}
-                    <span class="text-danger">Rented</span>
-                    {% endif %}
-                    </p>
-                    <p class="card-text">{{ work.desc }}</p>
+                    <h5 class="card-title">{{ work.title }}</h5>
+                    <a class="btn btn-primary" href="{% url 'work' work.id %}">View</a>
                 </div>
             </div>
-            <br>
-            {% endif %}
-            {% endfor %}
-
-            {% if not query %}
-            {% for work in works %}
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">
-                    <a href="work/{{ work.id }}">
-                        {{ work.title }}
-                    </a>
-                    {% if work.rating %}
-                    <small><span>{{ work.rating }} <label style="color:#f80;">&#9733;</label></span></small>
-                    {% else %}
-                    <small><span>No rating</span></small>
-                    {% endif %}
-                    </h5>
-                    <p class="card-text"><small class="text-muted">{{ work.creators.all|join:", " }}</small></p>
-                    <p class="card-text">{{ work.type.type }}:
-                    {% if work.available %}
-                    
-                    <span class="text-success">Available</span>
-                    {% else %}
-                    <span class="text-danger">Rented</span>
-                    {% endif %}
-                    </p>
-                    <p class="card-text">{{ work.desc }}</p>
-                </div>
-            </div>
-            <br>
-            {% endfor %}
-            {% endif %}
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                    {% if works.has_previous %}
-                    <li class="page-item"><a class="page-link"
-                            href="?page={{ works.previous_page_number }}">Previous</a></li>
-                    {% endif %}
-                    {% for i in works.paginator.page_range %}
-                    {% if works.number == i %}
-                    <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                    {% else %}
-                    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                    {% endif %}
-                    {% endfor %}
-                    {% if works.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{ works.next_page_number }}">Next</a></li>
-                    {% endif %}
-                </ul>
-            </nav>
-
         </div>
+        {% endfor %}
     </div>
-    {% else %}
-    <p>No works are available.</p>
-    {% endif %}
 </div>
 {% endblock %}
