reviews uudesta vanhimpaan

--- a/mysite/rental_system/templates/rental_system/index.html
+++ b/mysite/rental_system/templates/rental_system/index.html
@@ -13,6 +13,7 @@
     <p>You can rent and browse books, movies, music and so on!</p>
     <p class="lead">
         <a class="btn btn-primary btn-lg" href="{% url 'register' %}" role="button">Register</a>
+        <a class="btn btn-outline-primary btn-lg" href="{% url 'login' %}" role="button">Login</a>
     </p>
 </div>
 <h1 class="ml-4">Recently added Works</h1>
