--- a/mysite/rental_system/static/mobile.css
+++ b/mysite/rental_system/static/mobile.css
@@ -84,6 +84,11 @@
         float: left;
         padding-left: 1%;
     }
+
+    .bg-light {
+     text-align: center;
+     font-size: 14.5px;
+    }
 }
 
 @media(min-width:801px) {
