--- a/mysite/rental_system/templates/rental_system/account.html
+++ b/mysite/rental_system/templates/rental_system/account.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="container-fluid">
-        <div class="card">
+        <div class="card" style="margin-top: 20px;">
             <div class="card-body">
             <h4>Account details</h4>
             <p>Username: {{ user.username }} </p>
